
[*] Fri Jun 14 2002 - netcat (cvs)

  o Fixed a bug in UDP listen mode with unspecified port where Netcat was not
    actually listening.
  o Now a verbosity level 2 message is printed on listening.
  o Made netcat_strid() public in network.c with some minor changes.
  o More code cleanup.  Added a global variable netcat_mode to specify in which
    mode netcat was launched.
  o Fixed a preprocessor warning on some OSes.


[*] Mon Jun 10 2002 - netcat v0.5.1

  o Completely rewritten the function core_readwrite() in order to allow more
    possibilities of features adding.
  o Minor code cleanup.
  o Fixed a variable not correctly initialized, causing netcat to bind() with
    bogus information in certain circumstances.
  o Changed the prototype of the telnet codes parsing function to match the
    new objects-based design.
  o With udp listening mode the first 1024 bytes of the first incoming packet
    are no longer lost.
  o More updates to the man and info documentation files.
  o Now compiles correctly on Solaris (there was some configure checks
    missing).
  o Fixed a make error in the doc/ subdirectory.


[*] Fri May 31 2002 - netcat v0.5.0

  o Fixed the udp mode listen, which didn't allow any kind of safe read from
    stdin.
  o Generalized flagset.c to be more a library file.  Fixed some minor bugs in
    the interface.
  o Fixed a bug in ncprint() which didn't respect the EXIT flag if the
    verbosity flag was also specified and not satisfied.
  o Rewritten the core routines and arguments handling to allow a better
    features support.
  o Fixed several mis-behaviours for UDP protocol.
  o Cleaned up the global namespace
  o Now the -x option hexdumps also the source ip address in the introducing
    message.
  o Changed all the netcat defined types names.
  o Restore the tunnel mode functionality.  Now it is even able to tunnel from
    tcp to udp and vice-versa.
  o The udp listening mode now recognizes the `-z' command line switch.